--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ coverage
 rdoc
 pkg
 /doc/jasmine
-/lib/jazrb/jasmine
-/*jazrb-*.gem
-/*jazrb.gemspec
+/lib/jazz/jasmine
+/*jazz-*.gem
+/*jazz.gemspec
 .Wakefile.deps
