--- a/.jslintrbrc
+++ b/.jslintrbrc
@@ -1,3 +1,4 @@
+{ "indent": 2,
   "predef": [ "Ruby", "load", "print", "jasmine", "window", "document", "jQuery", "jazrb" ],
   "white": false,
   "onevar": false,
